Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
reactos-bootcd-0.4.15-dev-7366-g40131fd-x86-gcc-lin-dbg
- Start RAPPS
- No selected installed app
- Menu "Remove from Registry"
RAPPS askes user for confirmation, while no action is done whatever the answer
Expected result : no question / no action when no application, like for the "Uninstall" menu command- Guilty code : RemoveSelectedAppFromRegistry https://git.reactos.org/?p=reactos.git;a=blob;f=base/applications/rapps/gui.cpp;hb=6c93f3ca6b95fa5e1806fc29295d3bc8ada979f9#l263
Fix : RAPPS.patch![]()