[RAPPS] Don't ask for 'remote from registry' when no selection (#6267)

Based on KRosUser's RAPPS.patch.
JIRA issue: CORE-19409
If m_ApplicationView->GetFocusedItemData was NULL, then do not ask for removal.